--- a/TestProject/Base.lproj/Main.storyboard
+++ b/TestProject/Base.lproj/Main.storyboard
@@ -18,32 +18,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0LY-qO-7VQ" customClass="StateView" customModule="TestProject" customModuleProvider="target">
-                                <rect key="frame" x="91" y="89" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" name="systemYellowColor" catalog="System" colorSpace="catalog"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="image" keyPath="maskImage" value="Bihar"/>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="stateName" value="bihar"/>
-                                </userDefinedRuntimeAttributes>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Oe4-Lf-K9d" customClass="StateView" customModule="TestProject" customModuleProvider="target">
-                                <rect key="frame" x="91" y="174" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" name="keyboardFocusIndicatorColor" catalog="System" colorSpace="catalog"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="image" keyPath="maskImage" value="Jharkhand"/>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="stateName" value="jharkhand"/>
-                                </userDefinedRuntimeAttributes>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QM2-mC-o0o">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0LY-qO-7VQ" customClass="StateView" customModule="TestProject" customModuleProvider="target">
+                                        <rect key="frame" x="67" y="269" width="240" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" name="systemYellowColor" catalog="System" colorSpace="catalog"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="image" keyPath="maskImage" value="Bihar"/>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="stateName" value="bihar"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Oe4-Lf-K9d" customClass="StateView" customModule="TestProject" customModuleProvider="target">
+                                        <rect key="frame" x="65" y="353" width="240" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" name="keyboardFocusIndicatorColor" catalog="System" colorSpace="catalog"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="image" keyPath="maskImage" value="Jharkhand"/>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="stateName" value="jharkhand"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="QM2-mC-o0o" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="26u-dp-l7m"/>
+                            <constraint firstItem="QM2-mC-o0o" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="EZO-JS-xOJ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QM2-mC-o0o" secondAttribute="trailing" id="ZU1-b1-U0C"/>
+                            <constraint firstItem="QM2-mC-o0o" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="llu-uj-BrZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="QM2-mC-o0o" secondAttribute="bottom" id="otv-pr-hBb"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="100" y="-44"/>
+            <point key="canvasLocation" x="100" y="-44.527736131934034"/>
         </scene>
     </scenes>
     <resources>
